<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.AddEntryActivity">

    <ImageView
        android:id="@+id/imageViewPersonPicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/tosin"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="87dp" />

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Add name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="256dp" />

    <Button
        android:id="@+id/buttonAddPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add person"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="345dp" />
</LinearLayout>