<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    android:weightSum="3">


    <LinearLayout
        android:id="@+id/quizImg"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/guessPicture"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:contentDescription="picture"
            android:gravity="center"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Score:"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radio_btns"
        android:layout_width="334dp"
        android:layout_height="113dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:textAlignment="center">

        <RadioButton
            android:id="@+id/quizAlternative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:text="@string/quizBtnA" />

        <RadioButton
            android:id="@+id/quitAlternative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/quizBtnB" />

        <RadioButton
            android:id="@+id/quizAlternative3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/quizBtnC" />
    </RadioGroup>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="Submit" />

    <Button
        android:id="@+id/endQuizBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="End Quiz" />

</LinearLayout>
