<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ResultActivity">

    <TextView
        android:id="@+id/showResult"
        android:layout_width="match_parent"
        android:layout_height="434dp"
        android:gravity="center"
        android:text="@string/finalScore"
        android:textSize="34sp" />

    <Button
        android:id="@+id/returnToStartBtn"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:text="@string/return_to_start" />
</LinearLayout>