<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/buttonDatabase"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:text="Database" />

    <Button
        android:id="@+id/buttonQuiz"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="Quiz" />

</LinearLayout>